--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,197 +1,232 @@
-body{
-    margin: 0px;
-    font-family: 'Mili', sans-serif;
-    background-color: #0b5351ff; /* Dark Jungle Green*/
+body {
+  margin: 0px;
+  font-family: "Mili", sans-serif;
+  background-color: #0b5351ff;
+  /* Dark Jungle Green*/
 }
-.header {
-    background-color: #00a9a5ff;;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.header__img {
-    width: 200px;
-    margin-top: 10px;
-    margin-left: 10px;
-}
-.header__menu {
-    margin-right: 30px;
-}
-.header__menu ul {
-    display: none;
-    list-style: none;
-    padding: 0px;
-    position: absolute;
-    width: 100px;
-    text-align: right;
-    margin: 0px 0px 0px -14px;
-}
-.header__menu:hover ul, ul:hover {
-    display: block;
-}
-.header__menu li {
-    margin: 10px 0px;
-}
-.header__menu li a {
-    color: white;
-    text-decoration: none;    
-}
-.header__menu li a:hover {
-    text-decoration: underline;        
-}
-.header__menu--profile {
-    margin-right: 8px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-.header__menu--profile img {
-    margin-right: 8px;
-    width: 40px;
-}
-.header__menu--profile p {
-    margin: 0px;
-    color: white;
-}
-.main {
-    height: 300px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
+.header {
+  background-color: #00a9a5ff;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.header__img {
+  width: 200px;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.header__menu {
+  margin-right: 30px;
+}
+
+.header__menu ul {
+  display: none;
+  list-style: none;
+  padding: 0px;
+  position: absolute;
+  width: 100px;
+  text-align: right;
+  margin: 0px 0px 0px -14px;
+}
+
+.header__menu:hover ul, ul:hover {
+  display: block;
+}
+
+.header__menu li {
+  margin: 10px 0px;
+}
+
+.header__menu li a {
+  color: white;
+  text-decoration: none;
+}
+
+.header__menu li a:hover {
+  text-decoration: underline;
+}
+
+.header__menu--profile {
+  margin-right: 8px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.header__menu--profile img {
+  margin-right: 8px;
+  width: 40px;
+}
+
+.header__menu--profile p {
+  margin: 0px;
+  color: white;
+}
+
+.main {
+  height: 300px;
+  width: 100%;
+  padding-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(#00a9a5ff, #0b5351ff);
+}
+
 .main__title {
-    color: white;
-    font-size: 25px;
+  color: white;
+  font-size: 25px;
 }
+
 .search-input {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 2px solid white;
-    border-radius: 25px;
-    color: white;
-    font-family: 'Muli', sans-serif;
-    font-size: 16px;
-    height: 50px;
-    padding: 0px 20px;
-    width: 70%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid white;
+  border-radius: 25px;
+  color: white;
+  font-family: "Muli", sans-serif;
+  font-size: 16px;
+  height: 50px;
+  padding: 0px 20px;
+  width: 70%;
 }
+
 ::placeholder {
-    color: white;
+  color: white;
 }
 
 /* Login styles */
-
 .login {
-    background: linear-gradient(#00a9a5ff, #0b5351ff);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0px 30px;
-    min-height: calc(100vh - 200px);
-  }
-  .login__container {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 2px solid white;
-    border-radius: 40px;
-    color: white;
-    padding: 60px 68px 40px;
-    min-height: 700px;
-    width: 300px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-  }
-  .login__container--form {
-    display: flex;
-    flex-direction: column;
-  }
-  .login__container--form label {
-    font-size: 14px;
-  }
-  .login__container--remember-me {
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-  }
-  .login__container--remember-me a {
-    color: white;
-    font-size: 14px;
-    text-decoration: none;
-  }
-  .login__container--remember-me a:hover {
-    text-decoration: underline;
-  }
-  .login__container--social-media > div {
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  .login__container--social-media > div > img {
-    width: 30px;
-    margin-right: 10px;
-  }
-  .login__container--register {
-    font-size: 14px;  
-  }
-  .login__container--register a {
-    color: white;
-    font-weight: bold;
-    font-size: 16px;  
-    text-decoration: none;
-  }
-  .login__container--register a:hover {
-    text-decoration: underline;
-  }
-  .input {
-    background-color: transparent;
-    border-left: 0px;
-    border-top: 0px;
-    border-right: 0px;
-    border-bottom: 2px solid white;
-    font-size: 16px;
-    font-family: 'Muli', sans-serif;
-    margin-bottom: 20px;
-    padding: 0px 20px;
-    outline: none;
-    height: 50px;
-  }
-  ::placeholder {
-    color: white;
-  }
-  .button {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: none;
-    border-radius: 25px;
-    color: white;
-    cursor: pointer;
-    font-size: 16px;  
-    font-weight: bold; 
-    font-family: 'Muli', sans-serif;
-    height: 50px;
-    letter-spacing: 1px;
-    margin: 10px 0px;
-  }
-  .footer {
-    margin-top: 50px;
-    background-color: #092327ff;
-    display: flex;
-    align-items: center;
-    height: 100px;
-    width: 100%;
-  }
-  .footer a {
-    color: white;
-    cursor: pointer;
-    font-size: 14px;
-    padding-left: 30px;
-    text-decoration: none;  
-  }
-  .footer a:hover {
-    text-decoration: underline; 
-  }
+  background: linear-gradient(#00a9a5ff, #0b5351ff);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0px 30px;
+  min-height: calc(100vh - 200px);
+}
+
+.login__container {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid white;
+  border-radius: 40px;
+  color: white;
+  padding: 60px 68px 40px;
+  min-height: 700px;
+  width: 300px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.login__container--form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login__container--form label {
+  font-size: 14px;
+}
+
+.login__container--remember-me {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.login__container--remember-me a {
+  color: white;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.login__container--remember-me a:hover {
+  text-decoration: underline;
+}
+
+.login__container--social-media > div {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.login__container--social-media > div > img {
+  width: 30px;
+  margin-right: 10px;
+}
+
+.login__container--register {
+  font-size: 14px;
+}
+
+.login__container--register a {
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.login__container--register a:hover {
+  text-decoration: underline;
+}
+
+.input {
+  background-color: transparent;
+  border-left: 0px;
+  border-top: 0px;
+  border-right: 0px;
+  border-bottom: 2px solid white;
+  font-size: 16px;
+  font-family: "Muli", sans-serif;
+  margin-bottom: 20px;
+  padding: 0px 20px;
+  outline: none;
+  height: 50px;
+}
+
+::placeholder {
+  color: white;
+}
+
+.button {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: none;
+  border-radius: 25px;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: "Muli", sans-serif;
+  height: 50px;
+  letter-spacing: 1px;
+  margin: 10px 0px;
+}
+
+.footer {
+  margin-top: 50px;
+  background-color: #092327ff;
+  display: flex;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+}
+
+.footer a {
+  color: white;
+  cursor: pointer;
+  font-size: 14px;
+  padding-left: 30px;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+/*# sourceMappingURL=styles.css.map */
