--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,198 +1,235 @@
+//Palete 
+$dark-jungle-green: #092327ff;
+$deep-jungle-green: #0b5351ff;
+$light-sea-green: #00a9a5ff;
+$teal-blue: #4e8098ff;
+$pale-cerulean: #90c2e7ff;
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
-    margin: 0px;
-    font-family: 'Mili', sans-serif;
-    background-color: #0b5351ff; /* Dark Jungle Green*/
+  margin: 0px;
+  font-family: 'Mili', sans-serif;
+  background-color: $dark-jungle-green;
 }
 .header {
-    background-color: #00a9a5ff;;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: $light-sea-green;;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .header__img {
-    width: 200px;
-    margin-top: 10px;
-    margin-left: 10px;
+  width: 200px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 .header__menu {
     margin-right: 30px;
 }
 .header__menu ul {
-    display: none;
-    list-style: none;
-    padding: 0px;
-    position: absolute;
-    width: 100px;
-    text-align: right;
-    margin: 0px 0px 0px -14px;
+  display: none;
+  list-style: none;
+  padding: 0px;
+  position: absolute;
+  width: 100px;
+  text-align: right;
+  margin: 0px 0px 0px -14px;
 }
 .header__menu:hover ul, ul:hover {
-    display: block;
+  display: block;
 }
 .header__menu li {
-    margin: 10px 0px;
-}
-.header__menu li a {
+  margin: 10px 0px;
+  a {
     color: white;
-    text-decoration: none;    
-}
-.header__menu li a:hover {
-    text-decoration: underline;        
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;        
+    }  
+  }
 }
 .header__menu--profile {
-    margin-right: 8px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-.header__menu--profile img {
+  margin-right: 8px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  img {
     margin-right: 8px;
     width: 40px;
-}
-.header__menu--profile p {
+  }
+  p {
     margin: 0px;
     color: white;
+  }
 }
 .main {
-    height: 300px;
-    width: 100%;
-    padding-top: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: linear-gradient(#00a9a5ff, #0b5351ff);
+  min-height: calc(100vh - 92px);
+  width: 100%;
+  padding-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient($light-sea-green, $deep-jungle-green);
 }
 .main__title {
-    color: white;
-    font-size: 25px;
+  color: white;
+  font-size: 25px;
+  margin-bottom: 30px;
 }
 .search-input {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 2px solid white;
-    border-radius: 25px;
-    color: white;
-    font-family: 'Muli', sans-serif;
-    font-size: 16px;
-    height: 50px;
-    padding: 0px 20px;
-    width: 70%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid white;
+  border-radius: 25px;
+  color: white;
+  font-family: 'Muli', sans-serif;
+  font-size: 16px;
+  height: 50px;
+  padding: 0px 20px;
+  width: 70%;
 }
 ::placeholder {
-    color: white;
+  color: white;
 }
 
 /* Login styles */
 
 .login {
-    background: linear-gradient(#00a9a5ff, #0b5351ff);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0px 30px;
-    min-height: calc(100vh - 200px);
+  background: linear-gradient($light-sea-green, $deep-jungle-green);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0px 30px;
+  min-height: calc(100vh - 92px);
+}
+.login__container {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid white;
+  border-radius: 40px;
+  color: white;
+  padding: 60px 68px 40px;
+  min-height: 700px;
+  width: 420px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  .title{
+    margin-bottom: 20px;
+    align-self: center;
+    margin-right: 15px;
   }
-  .login__container {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 2px solid white;
-    border-radius: 40px;
-    color: white;
-    padding: 60px 68px 40px;
-    min-height: 700px;
-    width: 300px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-  }
-  .login__container--form {
-    display: flex;
-    flex-direction: column;
-  }
-  .login__container--form label {
+}
+.login__container--form {
+  display: flex;
+  flex-direction: column;
+  label {
     font-size: 14px;
   }
-  .login__container--remember-me {
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-  }
-  .login__container--remember-me a {
+}
+.login__container--remember-me {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  a {
     color: white;
     font-size: 14px;
     text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
   }
-  .login__container--remember-me a:hover {
-    text-decoration: underline;
-  }
-  .login__container--social-media > div {
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  .login__container--social-media > div > img {
-    width: 30px;
-    margin-right: 10px;
-  }
-  .login__container--register {
-    font-size: 14px;  
-  }
-  .login__container--register a {
+}
+.login__container--social-media > div {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+.login__container--social-media > div > img {
+  width: 30px;
+  margin-right: 10px;
+}
+.login__container--register {
+  font-size: 14px; 
+  a {
     color: white;
     font-weight: bold;
     font-size: 16px;  
     text-decoration: none;
-  }
-  .login__container--register a:hover {
-    text-decoration: underline;
-  }
-  .input {
-    background-color: transparent;
-    border-left: 0px;
-    border-top: 0px;
-    border-right: 0px;
-    border-bottom: 2px solid white;
-    font-size: 16px;
-    font-family: 'Muli', sans-serif;
-    margin-bottom: 20px;
-    padding: 0px 20px;
-    outline: none;
-    height: 50px;
-  }
-  ::placeholder {
-    color: white;
-  }
-  .button {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: none;
-    border-radius: 25px;
-    color: white;
-    cursor: pointer;
-    font-size: 16px;  
-    font-weight: bold; 
-    font-family: 'Muli', sans-serif;
-    height: 50px;
-    letter-spacing: 1px;
-    margin: 10px 0px;
-  }
-  .footer {
-    margin-top: 50px;
-    background-color: #092327ff;
-    display: flex;
-    align-items: center;
-    height: 100px;
-    width: 100%;
-  }
-  .footer a {
+    &:hover {
+      text-decoration: underline;
+    }
+  } 
+}
+.input {
+  background-color: transparent;
+  border-left: 0px;
+  border-top: 0px;
+  border-right: 0px;
+  border-bottom: 2px solid white;
+  font-size: 16px;
+  font-family: 'Muli', sans-serif;
+  margin-bottom: 20px;
+  padding: 0px 20px;
+  outline: none;
+  height: 50px;
+}
+::placeholder {
+  color: white;
+}
+.button {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: none;
+  border-radius: 25px;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;  
+  font-weight: bold; 
+  font-family: 'Muli', sans-serif;
+  height: 50px;
+  letter-spacing: 1px;
+  margin: 10px 0px;
+}
+.footer {
+  margin-top: 50px;
+  background-color: $dark-jungle-green;
+  display: flex;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+  a {
     color: white;
     cursor: pointer;
     font-size: 14px;
     padding-left: 30px;
-    text-decoration: none;  
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline; 
+    }
   }
-  .footer a:hover {
-    text-decoration: underline; 
+}
+
+@media only screen and (max-width: 425px) {
+  .login__container {
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    padding: 0;
   }
+  .input{
+    width: 85%;
+  }
+  .button{
+    width: 85%;
+  }
+  .login__container--remember-me{
+    width: 85%;
+  }
+}
